--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -77,10 +77,12 @@
     <Compile Include="Collision\CollisionMario\MarioPipeTop.cs" />
     <Compile Include="Collision\CollisionMario\MarioPipeTwoSide.cs" />
     <Compile Include="Collision\CollisionMario\MarioBlockTwoSide.cs" />
+    <Compile Include="Commands\MarioCommand\FlashCommand.cs" />
     <Compile Include="Commands\MarioCommand\ChangeBigState.cs" />
     <Compile Include="Commands\MarioCommand\ChangeDeadState.cs" />
     <Compile Include="Commands\MarioCommand\ChangeFireState.cs" />
     <Compile Include="Commands\MarioCommand\ChangeSmallState.cs" />
+    <Compile Include="Commands\MarioCommand\ReleasedFlashCommand.cs" />
     <Compile Include="Display\GameOverDisplayPanel.cs" />
     <Compile Include="Display\HeadsUpDisplayPanel.cs" />
     <Compile Include="Display\MarioLifeDisplayPanel.cs" />
