--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Commands\MarioCommand\ChangeFireState.cs" />
     <Compile Include="Commands\MarioCommand\ChangeSmallState.cs" />
     <Compile Include="Commands\MarioCommand\ReleasedFlashCommand.cs" />
+    <Compile Include="Display\ConversationDisplay.cs" />
     <Compile Include="Display\GameOverDisplayPanel.cs" />
     <Compile Include="Display\HeadsUpDisplayPanel.cs" />
     <Compile Include="Display\MarioLifeDisplayPanel.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="GameObjects\BackGourndObjects\Castle.cs" />
     <Compile Include="GameObjects\BackGourndObjects\MediumBush.cs" />
     <Compile Include="GameObjects\BackGourndObjects\MediumCloud.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\Peach.cs" />
     <Compile Include="GameObjects\BackGourndObjects\SmallBush.cs" />
     <Compile Include="GameObjects\BackGourndObjects\SmallCloud.cs" />
     <Compile Include="GameObjects\BackGourndObjects\SmallHill.cs" />
@@ -145,6 +147,7 @@
     <Compile Include="Sprites\Background\CastleSprite.cs" />
     <Compile Include="Sprites\Background\MediumBushSprite.cs" />
     <Compile Include="Sprites\Background\MediumCloudSprite.cs" />
+    <Compile Include="Sprites\Items\PeachSprite.cs" />
     <Compile Include="Sprites\Background\SmallBushSprite.cs" />
     <Compile Include="Sprites\Background\SmallCLoudSprite.cs" />
     <Compile Include="Sprites\Background\SmallHill.cs" />
@@ -368,6 +371,7 @@
     </Content>
     <Content Include="LevelLoader\Level2.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
